force-app/main/default/objects/Time_Entry__c/Time_Entry__c.object-meta.xml
<CustomObject>
    <label>Time Entry</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>