force-app/main/default/objects/Time_Entry__c/fields/Account_Fixed_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Account_Fixed_Monthly_Revenue__c</fullName>
    <label>Account Fixed Monthly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>