force-app/main/default/objects/Time_Entry__c/fields/Account_or_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Account_or_Parent_Account__c</fullName>
    <formula>IF(ISBLANK( Account_Parent__c ), Account__r.Name , Account_Parent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account or Parent Account</label>
    <type>Text</type>
</CustomField>