force-app/main/default/objects/Time_Entry__c/fields/Assignee_Id__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Id__c</fullName>
    <formula>CASESAFEID(IF(ISBLANK( Case__c ), Task__r.inov8__Assigned_To1__c , Case__r.OwnerId ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignee Id</label>
    <type>Text</type>
</CustomField>