force-app/main/default/objects/Time_Entry__c/fields/Billed_in_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Billed_in_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billed in Invoice</label>
    <referenceTo>Invoice_Header__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>