force-app/main/default/objects/Time_Entry__c/fields/Billed_in_Invoice_Detail_Number__c.field-meta.xml
<CustomField>
    <fullName>Billed_in_Invoice_Detail_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Replacement field Invoice Line Number</description>
    <label>Invoice Detail Number</label>
    <referenceTo>Invoice_Detail__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>