force-app/main/default/objects/Time_Entry__c/fields/Booknook_SOW__c.field-meta.xml
<CustomField>
    <fullName>Booknook_SOW__c</fullName>
    <label>Booknook Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Original Scope of Work</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>New Scope of Work</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>