force-app/main/default/objects/Time_Entry__c/fields/Cost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cost_Reason__c</fullName>
    <label>Cost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error en comunicacion con Nuage</fullName>
            </value>
            <value>
                <fullName>Error en comunicacion Interna</fullName>
            </value>
            <value>
                <fullName>Estimacion de la tarea para el cliente</fullName>
            </value>
            <value>
                <fullName>Junior Dev</fullName>
            </value>
            <value>
                <fullName>Mala estimacion de horas</fullName>
            </value>
            <value>
                <fullName>Reunión duplicada</fullName>
            </value>
            <value>
                <fullName>Rework por error de desarrollo</fullName>
            </value>
            <value>
                <fullName>Negotiation with Nuage</fullName>
            </value>
            <value>
                <fullName>SaltClick</fullName>
            </value>
            <value>
                <fullName>Banjaxed</fullName>
            </value>
            <value>
                <fullName>Doctors Now LLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>