force-app/main/default/objects/Time_Entry__c/fields/Doctors_Now_Task__c.field-meta.xml
<CustomField>
    <fullName>Doctors_Now_Task__c</fullName>
    <label>Doctors Now Task</label>
    <length>255</length>
    <type>Text</type>
</CustomField>