force-app/main/default/objects/Time_Entry__c/fields/End_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>End_Timestamp__c</fullName>
    <label>End Timestamp</label>
    <type>DateTime</type>
</CustomField>