force-app/main/default/objects/Time_Entry__c/fields/External_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Account_ID__c</fullName>
    <formula>IF(NOT(ISBLANK(Case__r.Account.Nuage_Account_ID__c)), Case__r.Account.Nuage_Account_ID__c,
IF(NOT(ISBLANK(Task__r.PMT_Project__r.Invoice_Account__r.Nuage_Account_ID__c)), Task__r.PMT_Project__r.Invoice_Account__r.Nuage_Account_ID__c, null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Account ID</label>
    <type>Text</type>
</CustomField>