force-app/main/default/objects/Time_Entry__c/fields/External_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Case_ID__c</fullName>
    <formula>Case__r.Nuage_Case_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Case ID</label>
    <type>Text</type>
</CustomField>