force-app/main/default/objects/Time_Entry__c/fields/External_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Project_ID__c</fullName>
    <formula>Project__r.Nuage_Project_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Project ID</label>
    <type>Text</type>
</CustomField>