force-app/main/default/objects/Time_Entry__c/fields/External_Task_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Task_ID__c</fullName>
    <formula>Task__r.Nuage_Task_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Task ID</label>
    <type>Text</type>
</CustomField>