force-app/main/default/objects/Time_Entry__c/fields/Harvest_Project__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Project__c</fullName>
    <formula>IF(NOT(ISBLANK( Project__r.Harvest_Default_Project__c )), Project__r.Harvest_Default_Project__c , Account__r.Harvest_Default_Project__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Harvest Project</label>
    <type>Text</type>
</CustomField>