force-app/main/default/objects/Time_Entry__c/fields/Harvest_Task__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Task__c</fullName>
    <formula>IF(ISBLANK( Project__r.Harvest_Default_Task__c), Account__r.Harvest_Default_Task__c, Project__r.Harvest_Default_Task__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Harvest Task</label>
    <type>Text</type>
</CustomField>