force-app/main/default/objects/Time_Entry__c/fields/Harvest_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Timestamp__c</fullName>
    <formula>IF( ISBLANK( Nuage_Timestamp__c ) , Start_Timestamp__c , Nuage_Timestamp__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Harvest Timestamp</label>
    <type>DateTime</type>
</CustomField>