force-app/main/default/objects/Time_Entry__c/fields/Invoice_Flag__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Flag__c</fullName>
    <label>Invoice Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>