force-app/main/default/objects/Time_Entry__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <formula>TEXT( Billed_in_Invoice__r.Invoice_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Status</label>
    <type>Text</type>
</CustomField>