force-app/main/default/objects/Time_Entry__c/fields/Jira_Task__c.field-meta.xml
<CustomField>
    <fullName>Jira_Task__c</fullName>
    <externalId>true</externalId>
    <label>Jira Task</label>
    <length>100</length>
    <type>Text</type>
</CustomField>