force-app/main/default/objects/Time_Entry__c/fields/Needs_Data_Sync__c.field-meta.xml
<CustomField>
    <fullName>Needs_Data_Sync__c</fullName>
    <formula>OR( Account__r.Parent.Name = &apos;The Nuage Group&apos;,
Account__r.Name = &apos;The Nuage Group&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needs Data Sync</label>
    <type>Checkbox</type>
</CustomField>