force-app/main/default/objects/Time_Entry__c/fields/Nuage_Hours__c.field-meta.xml
<CustomField>
    <fullName>Nuage_Hours__c</fullName>
    <formula>IF(  Time_Worked__c - FLOOR(  Time_Worked__c ) = 0 ||  Time_Worked__c - FLOOR( Time_Worked__c ) = 0.5,
 Time_Worked__c ,
IF( Time_Worked__c - FLOOR( Time_Worked__c ) &lt; 0.5,
 Time_Worked__c + (0.5 -(  Time_Worked__c - FLOOR( Time_Worked__c ))),
 Time_Worked__c + ( CEILING( Time_Worked__c ) -  Time_Worked__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nuage Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>