force-app/main/default/objects/Time_Entry__c/fields/Nuage_Time_Round_Difference__c.field-meta.xml
<CustomField>
    <fullName>Nuage_Time_Round_Difference__c</fullName>
    <formula>Nuage_Hours__c - Time_Worked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nuage Time Round Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>