force-app/main/default/objects/Time_Entry__c/fields/Nuage_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Nuage_Timestamp__c</fullName>
    <label>Nuage Timestamp</label>
    <type>DateTime</type>
</CustomField>