force-app/main/default/objects/Time_Entry__c/fields/Nuage_TTDetail_ID__c.field-meta.xml
<CustomField>
    <fullName>Nuage_TTDetail_ID__c</fullName>
    <label>Nuage TTDetail ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>