force-app/main/default/objects/Time_Entry__c/fields/Parent_Account_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Hourly_Rate__c</fullName>
    <formula>Account__r.Parent.Hourly_rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>