force-app/main/default/objects/Time_Entry__c/fields/Project_Manager_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Id__c</fullName>
    <formula>CASESAFEID(IF(ISBLANK( Case__c ), Task__r.QA__c , Case__r.QA__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Manager Id</label>
    <type>Text</type>
</CustomField>