force-app/main/default/objects/Time_Entry__c/fields/Real_Revenue_from_Invoice_All_Hours__c.field-meta.xml
<CustomField>
    <fullName>Real_Revenue_from_Invoice_All_Hours__c</fullName>
    <formula>IF(ISBLANK(Billed_in_Invoice__c), 0, Time_Worked__c * Billed_in_Invoice__r.Billed_Hourly_Rate_Total_Hours__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Real Revenue from Invoice (All Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>