force-app/main/default/objects/Time_Entry__c/fields/Real_Revenue_from_Invoice_Billed_Hours__c.field-meta.xml
<CustomField>
    <fullName>Real_Revenue_from_Invoice_Billed_Hours__c</fullName>
    <formula>IF(TEXT(Invoice_Flag__c) = &apos;Cost&apos; || ISBLANK(Billed_in_Invoice__c), 0, Time_Worked__c * Billed_in_Invoice__r.Billed_Hourly_Rate_Billed_Hours__c + IF( Account_or_Parent_Account__c = &apos;The Nuage Group&apos;, Nuage_Time_Round_Difference__c * Billed_in_Invoice__r.Billed_Hourly_Rate_Billed_Hours__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Real Revenue from Invoice (Billed Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>