force-app/main/default/objects/Time_Entry__c/fields/Start_Timestamp_Harvest__c.field-meta.xml
<CustomField>
    <fullName>Start_Timestamp_Harvest__c</fullName>
    <formula>TEXT(YEAR( Start_Date__c ))+&quot;-&quot;+
LPAD(TEXT( MONTH( Start_Date__c )), 2, &quot;0&quot;)+&quot;-&quot;+
LPAD(TEXT( DAY( Start_Date__c )), 2, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Timestamp Harvest</label>
    <type>Text</type>
</CustomField>