force-app/main/default/objects/Time_Entry__c/fields/Task_Account__c.field-meta.xml
<CustomField>
    <fullName>Task_Account__c</fullName>
    <formula>Task__r.PMT_Project__r.Invoice_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Account</label>
    <type>Text</type>
</CustomField>