force-app/main/default/objects/Time_Entry__c/fields/Time_Worked__c.field-meta.xml
<CustomField>
    <fullName>Time_Worked__c</fullName>
    <formula>(floor(( End_Timestamp__c -  Start_Timestamp__c )*24))
+
((( End_Timestamp__c -  Start_Timestamp__c )*24)-floor(( End_Timestamp__c -  Start_Timestamp__c )*24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Worked</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>