force-app/main/default/objects/Time_Entry__c/fields/Time_Worked_hh_mm_ss__c.field-meta.xml
<CustomField>
    <fullName>Time_Worked_hh_mm_ss__c</fullName>
    <formula>IF(
FLOOR(
( End_Timestamp__c - Start_Timestamp__c ) * 24
) &lt; 10,
&apos;0&apos; &amp; TEXT(
FLOOR(
( End_Timestamp__c - Start_Timestamp__c ) * 24
)
),
TEXT(
FLOOR(
( End_Timestamp__c - Start_Timestamp__c ) * 24
)
)
) &amp; &apos;:&apos; &amp;
IF(
FLOOR(
MOD(
( End_Timestamp__c - Start_Timestamp__c ) * 24 * 60,
60
)
) &lt; 10,
&apos;0&apos; &amp; TEXT(
FLOOR(
MOD(
( End_Timestamp__c - Start_Timestamp__c ) * 24 * 60,
60
)
)
),
TEXT(
FLOOR(
MOD(
( End_Timestamp__c - Start_Timestamp__c ) * 24 * 60,
60
)
)
)
) &amp; &apos;:&apos; &amp;
IF(
FLOOR(
MOD(
( End_Timestamp__c - Start_Timestamp__c ) * 24 * 60 * 60,
60
)
) &lt; 10,
&apos;0&apos; &amp; TEXT(
FLOOR(
MOD(
( End_Timestamp__c - Start_Timestamp__c ) * 24 * 60 * 60,
60
)
)
),
TEXT(
FLOOR(
MOD(
( End_Timestamp__c - Start_Timestamp__c ) * 24 * 60 * 60,
60
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Worked (hh:mm:ss)</label>
    <type>Text</type>
</CustomField>