force-app/main/default/objects/Time_Entry__c/fields/User_Department__c.field-meta.xml
<CustomField>
    <fullName>User_Department__c</fullName>
    <label>User Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>