force-app/main/default/objects/Time_Entry__c/fields/User_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>User_Hourly_Rate__c</fullName>
    <formula>User__r.Hourly_rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>