force-app/main/default/objects/Time_Entry__c/fields/Week_Number__c.field-meta.xml
<CustomField>
    <fullName>Week_Number__c</fullName>
    <formula>&apos;WK&apos; &amp; &quot; &quot; &amp; TEXT( FLOOR((( DATEVALUE(Start_Timestamp__c) - DATE(YEAR(DATEVALUE(Start_Timestamp__c)), 1, 1) + 1) +
MOD(DATE(YEAR(DATEVALUE(Start_Timestamp__c)), 1, 1) - DATE(1900, 1, 7), 7)) / 7)) &amp; &quot; &quot; &amp; TEXT( YEAR( DATEVALUE(Start_Timestamp__c ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Number</label>
    <type>Text</type>
</CustomField>