force-app/main/default/objects/Time_Entry__c/fields/Work_Detail__c.field-meta.xml
<CustomField>
    <fullName>Work_Detail__c</fullName>
    <formula>IF( ISBLANK( Case_Subject__c ) , Task__r.Name , Case_Subject__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Detail</label>
    <type>Text</type>
</CustomField>