force-app/main/default/objects/Time_Entry__c/fields/Work_Detail_v2__c.field-meta.xml
<CustomField>
    <fullName>Work_Detail_v2__c</fullName>
    <formula>IF ( Work_Detail__c = &apos;Default Case for Clockify Entries&apos;, Name, Work_Detail__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Detail v2</label>
    <type>Text</type>
</CustomField>