force-app/main/default/objects/Time_Entry__c/validationRules/Check_Cost_Reason_is_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Cost_Reason_is_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Invoice_Flag__c, &apos;Cost&apos;),
    ISBLANK(TEXT(Cost_Reason__c))
)</errorConditionFormula>
    <errorDisplayField>Cost_Reason__c</errorDisplayField>
    <errorMessage>The Cost Reason must have a reason when the Invoice Flag is Cost</errorMessage>
</ValidationRule>