force-app/main/default/objects/Time_Entry__c/validationRules/Notes_Are_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Notes_Are_Required</fullName>
    <active>false</active>
    <errorConditionFormula>(ISBLANK( Notes__c ) || Notes__c = &quot;Check in: , Checkout:&quot; || Notes__c = &quot;Check in:&quot; || Notes__c = &quot;Check in:, Checkout:&quot;) &amp;&amp; (CreatedDate &gt;= DATETIMEVALUE(&quot;2023-05-25 00:00:00&quot;) || ISNEW())</errorConditionFormula>
    <errorDisplayField>Notes__c</errorDisplayField>
    <errorMessage>Please enter the Notes that describe the time entry.</errorMessage>
</ValidationRule>