force-app/main/default/objects/Time_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Start_Timestamp__c</columns>
    <columns>End_Timestamp__c</columns>
    <columns>Task__c</columns>
    <columns>Time_Worked__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>