force-app/main/default/objects/Time_Entry__c/listViews/My_Time_Entries_This_Month.listView-meta.xml
<ListView>
    <fullName>My_Time_Entries_This_Month</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Start_Timestamp__c</columns>
    <columns>End_Timestamp__c</columns>
    <columns>Case__c</columns>
    <columns>Task__c</columns>
    <columns>Time_Worked__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>End_Timestamp__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>My Time Entries This Month</label>
</ListView>