force-app/main/default/objects/Time_Entry__c/listViews/Time_Entries_For_Invoicing_ASC.listView-meta.xml
<ListView>
    <fullName>Time_Entries_For_Invoicing_ASC</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Start_Timestamp__c</columns>
    <columns>End_Timestamp__c</columns>
    <columns>Invoice__c</columns>
    <columns>Task__c</columns>
    <columns>Time_Worked__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Timestamp__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <filters>
        <field>Account_Parent__c</field>
        <operation>contains</operation>
        <value>Alternative Solutions Consulting</value>
    </filters>
    <filters>
        <field>Invoice_Flag__c</field>
        <operation>notEqual</operation>
        <value>Cost</value>
    </filters>
    <label>Time Entries For Invoicing - ASC</label>
</ListView>