force-app/main/default/objects/Time_Entry__c/listViews/Time_Entries_For_Invoicing_Doctors_Now.listView-meta.xml
<ListView>
    <fullName>Time_Entries_For_Invoicing_Doctors_Now</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Start_Timestamp__c</columns>
    <columns>End_Timestamp__c</columns>
    <columns>Task__c</columns>
    <columns>Invoice__c</columns>
    <columns>Time_Worked__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>Doctors</value>
    </filters>
    <filters>
        <field>Invoice__c</field>
        <operation>equals</operation>
    </filters>
    <label>Time Entries For Invoicing - Doctors Now</label>
</ListView>