force-app/main/default/objects/Time_Entry__c/listViews/Time_Entries_of_Project_Management.listView-meta.xml
<ListView>
    <fullName>Time_Entries_of_Project_Management</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Start_Timestamp__c</columns>
    <columns>End_Timestamp__c</columns>
    <columns>Case__c</columns>
    <columns>Task__c</columns>
    <columns>Time_Worked__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Time Entries of Project Management</label>
</ListView>